--- a/StringCalculator/StringCalculator/StringCalculator.csproj
+++ b/StringCalculator/StringCalculator/StringCalculator.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{CB2B9B3B-6FFA-497E-BFCA-4957231483E4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StringCalculator</RootNamespace>
-    <AssemblyName>StringCalculator</AssemblyName>
+    <RootNamespace>Ajejczes.CodingDojo.StringCalculator</RootNamespace>
+    <AssemblyName>Ajejczes.CodingDojo.StringCalculator</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
