--- a/QppFacade/QppFacade.Tests/packages.config
+++ b/QppFacade/QppFacade.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.2.1" targetFramework="net451" />
   <package id="Castle.Core" version="3.3.0" targetFramework="net451" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net451" />
   <package id="Machine.Specifications" version="0.8.2" targetFramework="net451" />
