--- a/QppFacade/QppFacade/QppFacade.csproj
+++ b/QppFacade/QppFacade/QppFacade.csproj
@@ -111,8 +111,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AttributesBag.cs" />
+    <Compile Include="Models\AttributeBag.cs" />
+    <Compile Include="Models\ChartSourceReference.cs" />
     <Compile Include="Models\DitaMap.cs" />
-    <Compile Include="Models\References.cs" />
+    <Compile Include="Models\FileAsset.cs" />
+    <Compile Include="Models\IReference.cs" />
+    <Compile Include="Models\Picture.cs" />
+    <Compile Include="Models\TableSourceReference.cs" />
+    <Compile Include="Models\Topic.cs" />
+    <Compile Include="Models\XmlReference.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Qpp.cs" />
     <Compile Include="QppAttributes\BaseAttribute.cs" />
