--- a/QppFacade/QppFacade.Tests/QppFacade.Tests.csproj
+++ b/QppFacade/QppFacade.Tests/QppFacade.Tests.csproj
@@ -124,6 +124,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConstsTests.cs" />
     <Compile Include="TopicTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UploadingAssetsTests.cs" />
