--- a/QppFacade/QppFacade/packages.config
+++ b/QppFacade/QppFacade/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Castle.Core" version="3.3.0" targetFramework="net451" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net451" />
+  <package id="YamlDotNet" version="3.2.0" targetFramework="net451" />
+  <package id="YamlDotNet.Dynamic" version="3.1.1" targetFramework="net451" />
 </packages>
