ditamap test passing

--- a/QppFacade/QppFacade/QppFacade.csproj
+++ b/QppFacade/QppFacade/QppFacade.csproj
@@ -118,15 +118,9 @@
   <ItemGroup>
     <Compile Include="Attributes.cs" />
     <Compile Include="AttributesBag.cs" />
-    <Compile Include="Consts\CustomConstsCs.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CustomConstsCs.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Consts\Formatters\CsharpFormatter.cs" />
-    <Compile Include="Consts\Formatters\IFormatters.cs" />
-    <Compile Include="Consts\Formatters\JavaFormatter.cs" />
-    <Compile Include="Consts\Formatters\JavaScriptFormatter.cs" />
+    <Compile Include="Consts\CustomConstsCs.cs" />
+    <Compile Include="Consts\PhoenixValue.cs" />
+    <Compile Include="Consts\PhoenixValuesInitializer.cs" />
     <Compile Include="Models\AttributeBag.cs" />
     <Compile Include="Models\ChartSourceReference.cs" />
     <Compile Include="Models\DitaMap.cs" />
@@ -152,18 +146,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Consts\content\ParseQppConfig.ttinclude" />
-    <None Include="Consts\content\ReadQppConfig.ttinclude" />
     <None Include="CustomAttributes.yml" />
-    <None Include="Consts\CustomConstsCs.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>CustomConstsCs.cs</LastGenOutput>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
