--- a/QppFacade/QppFacade/QppFacade.csproj
+++ b/QppFacade/QppFacade/QppFacade.csproj
@@ -30,6 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper">
+      <HintPath>..\packages\AutoMapper.3.2.1\lib\net40\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="AutoMapper.Net4">
+      <HintPath>..\packages\AutoMapper.3.2.1\lib\net40\AutoMapper.Net4.dll</HintPath>
+    </Reference>
     <Reference Include="Castle.Core">
       <HintPath>..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
@@ -120,6 +126,7 @@
     <Compile Include="Consts\CustomConstsCs.cs" />
     <Compile Include="Consts\PhoenixValue.cs" />
     <Compile Include="Consts\PhoenixValuesInitializer.cs" />
+    <Compile Include="Models\AssetModel.cs" />
     <Compile Include="Models\AttributeBag.cs" />
     <Compile Include="Models\ChartSourceReference.cs" />
     <Compile Include="Models\DitaMap.cs" />
@@ -151,6 +158,7 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
