--- a/QppFacade/QppFacade/QppFacade.csproj
+++ b/QppFacade/QppFacade/QppFacade.csproj
@@ -127,19 +127,13 @@
     <Compile Include="Consts\PhoenixValue.cs" />
     <Compile Include="Consts\PhoenixValuesInitializer.cs" />
     <Compile Include="Models\AttributeBag.cs" />
-    <Compile Include="Models\ChartSourceReference.cs" />
-    <Compile Include="Models\DitaMap.cs" />
-    <Compile Include="Models\FileAsset.cs" />
-    <Compile Include="Models\IReference.cs" />
-    <Compile Include="Models\Picture.cs" />
-    <Compile Include="Models\TableSourceReference.cs" />
-    <Compile Include="Models\Topic.cs" />
-    <Compile Include="Models\XmlReference.cs" />
+    <Compile Include="Models\Relation.cs" />
+    <Compile Include="Models\AssetModel.cs" />
+    <Compile Include="TopicRelationFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Qpp.cs" />
     <Compile Include="QppAttributes\BaseAttribute.cs" />
     <Compile Include="QppAttributes\BoolAttr.cs" />
-    <Compile Include="QppAttributes\CollectionAttrs.cs" />
     <Compile Include="QppAttributes\DateTimeAttr.cs" />
     <Compile Include="QppAttributes\DomainAttr.cs" />
     <Compile Include="QppAttributes\NumAttr.cs" />
