Cleaning up QPP.cs

--- a/QppFacade/QppFacade.Tests/QppFacade.Tests.csproj
+++ b/QppFacade/QppFacade.Tests/QppFacade.Tests.csproj
@@ -152,7 +152,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="asset.txt">
+    <Content Include="Assets\asset.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\chart.jpg">
