--- a/QppFacade/QppFacade/QppFacade.csproj
+++ b/QppFacade/QppFacade/QppFacade.csproj
@@ -122,7 +122,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes.cs" />
+    <Compile Include="PhoenixAttributes.cs" />
     <Compile Include="Consts\CustomConstsCs.cs" />
     <Compile Include="Consts\PhoenixValue.cs" />
     <Compile Include="Consts\PhoenixValuesInitializer.cs" />
@@ -130,15 +130,10 @@
     <Compile Include="GenericAttributeMapper.cs" />
     <Compile Include="Models\Relation.cs" />
     <Compile Include="Models\AssetModel.cs" />
+    <Compile Include="PhoenixAttribute.cs" />
     <Compile Include="TopicRelationFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Qpp.cs" />
-    <Compile Include="QppAttributes\BaseAttribute.cs" />
-    <Compile Include="QppAttributes\BoolAttr.cs" />
-    <Compile Include="QppAttributes\DateTimeAttr.cs" />
-    <Compile Include="QppAttributes\DomainAttr.cs" />
-    <Compile Include="QppAttributes\NumAttr.cs" />
-    <Compile Include="QppAttributes\TextAttr.cs" />
     <Compile Include="QppFacadeWindsorInstaller.cs" />
     <Compile Include="XElementExtensions.cs" />
   </ItemGroup>
